frontend(package): add devdebug script

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "build": "next build",
     "start": "next start",
     "dev": "next dev -p 8200",
+    "devdebug": "cross-env NODE_OPTIONS='--inspect' next dev -p 8200",
     "format": "prettier --write .",
     "type-check": "tsc --pretty --noEmit",
     "lint": "eslint --ext ts --ext tsx --ext js pages/ lib/ components/",
@@ -37,6 +38,7 @@
     "@typescript-eslint/parser": "^4.22.1",
     "autoprefixer": "^10.2.5",
     "babel-plugin-typescript-to-proptypes": "^1.4.2",
+    "cross-env": "^7.0.3",
     "cssnano": "^5.0.2",
     "esbuild-loader": "^2.13.1",
     "eslint": "^7.26.0",
