--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@heroicons/react": "^1.0.1",
     "@kachkaev/react-inline-js": "^0.2.0",
     "axios": "^0.21.1",
+    "framer-motion": "^4.1.17",
     "next": "^10.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
