--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@badrap/bar-of-progress": "^0.1.2",
     "@reduxjs/toolkit": "^1.7.1",
+    "axios": "^0.24.0",
     "exponential-backoff": "^3.1.0",
     "framer-motion": "^5.5.4",
     "luxon": "^2.2.0",
@@ -27,12 +28,14 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-treebeard-ts": "^3.2.5",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.0.7",
     "@tailwindcss/forms": "^0.4.0",
+    "@types/axios": "^0.14.0",
     "@types/luxon": "^2.0.8",
     "@types/node": "^17.0.0",
     "@types/react": "^17.0.37",
