--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,4 @@
 NEXT_PUBLIC_WS_URL=ws://127.0.0.1:12790/api/event
 
 # Your VTHell v3 deployment
-NEXT_PUBLIC_HTTP_URL=http://127.0.0.1:12790/api
+NEXT_PUBLIC_HTTP_URL=http://127.0.0.1:12790/
