--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ NEXT_PUBLIC_HTTP_URL=http://127.0.0.1:12790/
 
 # Your VTHell public archive location/url
 NEXT_PUBLIC_ARCHIVE_URL=
+
+# Your Admin Page password
+VTHELL_PASSWORD=
+TOKEN_SECRET=
