--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.24.0",
     "exponential-backoff": "^3.1.0",
     "framer-motion": "^5.5.4",
+    "iron-session": "^6.0.4",
     "luxon": "^2.2.0",
     "next": "^12.0.7",
     "preact": "^10.6.4",
